feat: Implement certificate extraction feature with OCR capabilities and email functionality

--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ MONGODB_URI=mongodb+srv://hymavathi:hyma@cluster0.gkeagtk.mongodb.net/?retryWrit
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
 PORT=3000
 NODE_ENV=development
+EMAIL_USER=tippaadithya89@gmail.com
+EMAIL_PASSWORD=Adithya@2007
