--- a/server/package.json
+++ b/server/package.json
@@ -8,19 +8,25 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "cors": "^2.8.5",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
     "multer": "^1.4.4",
-    "csv-parser": "^3.0.0"
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["certificate", "generator", "mongodb", "authentication"],
+  "keywords": [
+    "certificate",
+    "generator",
+    "mongodb",
+    "authentication"
+  ],
   "author": "Certificate Generator Team",
   "license": "MIT"
 }
